--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "radicle-avatar"
 version = "0.1.0"
-license = "GPL-2.0-or-later WITH Classpath-exception-2.0"
+license = "MIT OR Apache-2.0"
 authors = ["radicle team <dev@radicle.xyz>"]
 edition = "2018"
 
