Actually run the typescript specs
Signed-off-by: Rūdolfs Ošiņš <rudolfs@osins.org>

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -36,3 +36,9 @@ steps:
       - ".ci/docs"
     agents: *build-agent
     env: *build-docker-nightly
+
+  - label: "Typescript"
+    commands:
+      - ".ci/typescript"
+    agents: *build-agent
+    env: *build-docker-nightly
