Move generate-fixtures to examples
This allows us to declare its dependencies as dev dependencies.

Signed-off-by: Rūdolfs Ošiņš <rudolfs@osins.org>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "yarn regenerate-fixtures && jest",
     "clean": "rm -rf lib/*",
-    "regenerate-fixtures": "rm -rf ./fixtures.json && cargo run generate-fixtures",
+    "regenerate-fixtures": "rm -rf ./fixtures.json && cargo run --example generate-fixtures",
     "build": "yarn run clean && tsc --p tsconfig.package.json"
   },
   "devDependencies": {
