--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = [ "derive" ] }
+
+[dev-dependencies]
 serde_json = "1"
 rand = "0.8"
+
+[[example]]
+name = "generate-fixtures"
