--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rm -rf lib/*",
     "regenerate-fixtures": "rm -rf ./fixtures.json && cargo run --example generate-fixtures",
     "build": "yarn run clean && tsc --p tsconfig.package.json",
-    "prepublishOnly": "yarn run build"
+    "prepare": "yarn run build"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
