--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "repository": "git@github.com:radicle-dev/radicle-avatar.git",
   "main": "./lib/src/lib.js",
   "types": "./lib/src/lib.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "test": "yarn regenerate-fixtures && jest",
     "clean": "rm -rf lib/*",
