--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "yarn regenerate-fixtures && jest",
     "clean": "rm -rf lib/*",
     "regenerate-fixtures": "rm -rf ./fixtures.json && cargo run --example generate-fixtures",
-    "build": "yarn run clean && tsc --p tsconfig.package.json",
+    "build": "yarn run clean && tsc --project tsconfig.package.json",
     "prepare": "yarn run build"
   },
   "devDependencies": {
