--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es5", "es6", "es7", "esnext", "dom"],
-    "target": "es5",
+    "target": "es2020",
     "allowJs": true,
     "module": "commonjs",
     "declaration": true,
@@ -25,6 +24,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "tsconfig.package.json"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
