--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["js"],
+  "include": ["js", "tsconfig.package.json"],
   "exclude": ["node_modules"]
 }
