Port implementation to typescript (#5)
* Run typescript tests on CI
* Test whether Rust and Typescript outputs match
* Use f64 arithmetic for color computation
  It's hard to simulate f32 operations in javascript. 🤷

Signed-off-by: Rūdolfs Ošiņš <rudolfs@osins.org>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 /target
 Cargo.lock
+/dist
+node_modules
+fixtures.json
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
