--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -6,7 +6,7 @@ steps:
       production: "true"
       platform: "linux"
     env: &build-docker-nightly
-      DOCKER_IMAGE: "gcr.io/opensourcecoin/radicle-avatar-build-nightly@sha256:3e2d6ce8675087b99e2b36330a6d1b2d68a66b274cdba006c0caef397907e8cb"
+      DOCKER_IMAGE: "gcr.io/opensourcecoin/radicle-avatar-build@sha256:f301f47dbbf3b8df151b5b5a658712983805033c2a4f03a1ba056c9ca9490bc4"
       DOCKER_FILE: .docker/nightly/Dockerfile
 
   - label: "Build + Test (stable rust)"
@@ -34,5 +34,11 @@ steps:
   - label: "Docs"
     commands:
       - ".ci/docs"
+    agents: *build-agent
+    env: *build-docker-nightly
+
+  - label: "Typescript"
+    commands:
+      - ".ci/typescript"
     agents: *build-agent
     env: *build-docker-nightly
