--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "repository": "git@github.com:radicle-dev/radicle-avatar.git",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": ["dist", "LICENSE-MIT", "LICENSE-APACHE"],
+  "files": [
+    "dist",
+    "LICENSE-MIT",
+    "LICENSE-APACHE"
+  ],
   "scripts": {
     "test": "yarn regenerate-fixtures && jest",
-    "clean": "rm -rf ./dist",
-    "regenerate-fixtures": "rm -rf ./fixtures.json && cargo run --example generate-fixtures",
+    "clean": "rimraf ./dist",
+    "regenerate-fixtures": "rimraf ./fixtures.json && cargo run --example generate-fixtures",
     "build": "yarn run clean && tsc --project tsconfig.package.json",
     "prepack": "yarn run build"
   },
@@ -19,5 +23,8 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "rimraf": "^3.0.2"
   }
 }
